--- a/src/templates/inventory/add.html
+++ b/src/templates/inventory/add.html
@@ -6,16 +6,15 @@
     <h1 class="main-header">Item Addition</h1>
 </div>
 
-<div id="add-table" class="table-wrapper">
-    <div class="table-main inventory-table">
+<div class="table-wrapper">
+    <div class="table-main add-table">
         <div class="table-header">
             <div class="table-row">
-                <div>Code</div>
+                <div>Item ID</div>
                 <div>Name</div>
                 <div>Description</div>
                 <div>Shelf Life</div>
                 <div>Unit Price</div>
-                <div>Available Quantity</div>
                 <div>Unit</div>
                 <div></div>
             </div>
@@ -30,26 +29,29 @@
     </div>
 </div>
 
-<form id="add">
-    <input type="submit" id="add-btn" value="Add items" name="add-btn" disabled>
-</form>
+<div id="add-bottom">
+    <span id="errmsg"></span>
+    <form id="submit-form">
+        <input type="submit" value="Add items" name="add-btn" disabled>
+    </form>
+</div>
 
 <script>
     function disableButton () {
-        document.querySelector("#add-btn").disabled =
-            // Disable if there are no rows in table
-            document.querySelector("#add-table .table-body").childElementCount === 1
-            // Disable if at least one row has no item code
-            || Array.from(document.querySelectorAll("#add-table .table-body .table-row:not(#add-row) > :first-child input")).some(x => x.value === '')
+        document.querySelector("#submit-form [type=submit]").disabled =
+            // Disable if there are no rows in table (1 child = the "Add row" button)
+            document.querySelector(".add-table .table-body").childElementCount === 1
+            // Disable if any inputs are invalid
+            || Array.from(document.querySelectorAll(".add-table input")).some(x => x.value === '' && !x.classList.contains('hide'))
             // Disable if at least one input box is invalid
-            || Array.from(document.querySelectorAll("#add-table input")).some(x => !x.checkValidity());
+            || Array.from(document.querySelectorAll(".add-table input")).some(x => !x.checkValidity());
     }
 
     function addRow () {
         let row = document.createElement("div");
         row.classList.add("table-row");
 
-        for (let i = 0; i < 7; i++) {
+        for (let i = 0; i < 6; i++) {
             let el;
 
             if (i === 2) {
@@ -57,23 +59,21 @@
                 el.rows = 1;
             } else {
                 el = document.createElement("input");
-                el.type = (i === 0 || i === 1 || i === 6) ? "text" : "number";
-                if (i !== 0 && i !== 1 && i !== 6) el.min = 0;
 
-                if (i === 0) el.maxLength = 8;
-                if (i === 1) el.maxLength = 15;
-                if (i === 2) el.maxLength = 100;
-                if (i === 4) el.step = 0.01;
-                if (i === 5) el.step = 1;
-                if (i === 6) el.maxLength = 15;
+                if (i === 0) { el.type = "text"; el.maxLength = 16; }
+                if (i === 1) { el.type = "text"; el.maxLength = 20; }
+                if (i === 2) { el.type = "text"; el.maxLength = 100; }
+                if (i === 3) { el.type = "number"; el.min = 1; el.step = 1; }
+                if (i === 4) { el.type = "number"; el.min = 0; el.step = 0.01; }
+                if (i === 5) { el.type = "text"; el.maxLength = 20; }
             }
 
             let wrapper = document.createElement("div");
 
             if (i === 0) wrapper.classList.add("mono");
             if (i === 2) wrapper.classList.add("left");
-            if (i === 4 || i === 5) wrapper.classList.add("right");
-            if (i === 4 || i === 5) wrapper.classList.add("tabnum");
+            if (i === 3 || i === 4) wrapper.classList.add("right");
+            if (i === 3 || i === 4) wrapper.classList.add("tabnum");
 
             wrapper.appendChild(el);
             
@@ -87,17 +87,15 @@
                     sel.appendChild(op);
                 }
                 
-                sel.value = 1;
+                sel.value = '1';
                 sel.addEventListener("input", () => {
                     let op = sel.previousElementSibling;
 
                     if (sel.value === '-1') {
                         op.classList.add("hide");
-                        sel.classList.add("extend");
                     }
                     else {
                         op.classList.remove("hide");
-                        sel.classList.remove("extend");
                     }
                 });
                 wrapper.appendChild(sel);
@@ -115,42 +113,50 @@
         b.classList.add("delete-row");
         e.appendChild(b);
         row.append(e);
+        
+        b.addEventListener("click", () => document.querySelector(".add-table .table-body").removeChild(b.parentElement.parentElement));
 
-        b.addEventListener("click", () => document.querySelector("#add-table .table-body").removeChild(b.parentElement.parentElement));
-
-        document.querySelector("#add-table .table-body").insertBefore(row, document.querySelector("#add-row"));
+        document.querySelector(".add-table .table-body").insertBefore(row, document.querySelector("#add-row"));
         disableButton();
     }
 
-    document.querySelector("#add").addEventListener("submit", e => {
+    document.querySelector(".add-table").addEventListener("input", () => document.querySelector("#errmsg").innerText = "");
+
+    document.querySelector("#submit-form").addEventListener("submit", e => {
         e.preventDefault();
 
         let values = [];
 
-        for (let row of Array.from(document.querySelectorAll("#add-table .table-body .table-row:not(#add-row)"))) {
-            let v = [];
-            Array.from(row.children).forEach((x, i) => {
-                if (i === 3) v.push(x.lastChild.value === '-1' ? -1 : Math.round(+x.firstChild.value * +x.lastChild.value));
-                else if (i === 4 || i === 5) v.push(+x.firstChild.value);
-                else if (i !== 7) v.push(x.firstChild.value);
-            });
-            values.push(v);
-        }
+        for (let row of Array.from(document.querySelectorAll(".add-table .table-body .table-row:not(#add-row)"))) {
+            let children = row.children;
 
+            values.push({
+                "ItemID": children[0].firstChild.value,
+                "ItemName": children[1].firstChild.value,
+                "ItemDescription": children[2].firstChild.value,
+                "ShelfLife": children[3].lastChild.value === "-1" ? null : +children[3].firstChild.value * +children[3].lastChild.value,
+                "Price": +children[4].firstChild.value,
+                "Unit": children[5].firstChild.value,
+            })
+        }
+        
         fetch("{{ url_for('add_items') }}", {
             "method": "POST",
             "headers": {
                 "Content-Type": "application/json"
             },
             "body": JSON.stringify({ "values": values })
-        }).then(d => {
+        }).then(async d => {
             if (d.status === 200) window.location = "{{ url_for('inventory') }}";
+            if (d.status === 500) {
+                msg = await d.text();
+                document.querySelector("#errmsg").innerHTML = `<b>ERROR:</b> ${msg}`;
+                alert(`ERROR: ${msg}`);
+            }
         });
-
-        disableButton();
     });
 
-    document.querySelector("#add-table").addEventListener("input", disableButton);
+    document.querySelector(".add-table").addEventListener("input", disableButton);
 
     document.querySelector("#add-row").addEventListener("click", addRow);
 </script>
