--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,3 +1,5 @@
+@import url("fonts/fonts.css");
+
 :root {
     font-size: 1rem;
     font-family: "IBM Plex Sans", sans-serif;
@@ -27,6 +29,9 @@
     --red-shadow: hsla(345, 100%, 65%, 30%);
 
     --translucent: hsla(255, 10%, 99%, 80%);
+    --status-pending: hsl(44, 100%, 62%);
+    --status-approved: hsl(105, 80%, 57%);
+    --status-rejected: hsl(5, 100%, 61%);
 }
 
 * {
@@ -94,7 +99,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, in
     border-bottom: 0.05rem solid var(--dark-blue);
 }
 
-input[type=submit], input[type=button], a.btn, select, button {
+input[type=submit], input[type=button], input[type=date], a.btn, select, button {
     padding: 0.5rem 0.7rem;
     background: var(--white);
     box-shadow: 0rem 0.2rem 0.4rem var(--btn-shadow);
@@ -106,13 +111,13 @@ input[type=submit], input[type=button], a.btn, select, button {
     transition: background 0.1s, box-shadow 0.1s;
 }
 
-input[type=submit]:hover, input[type=button]:hover, a.btn:hover, select:hover, button:hover {
+input[type=submit]:hover, input[type=button]:hover, input[type=date]:hover, a.btn:hover, select:hover, button:hover {
     cursor: pointer;
 }
 
-input[type=button]:not(:disabled):hover, a.btn:not(:disabled):hover, select:not(:disabled):hover, button:not(:disabled):hover,
-input[type=button]:focus, a.btn:focus, select:focus, button:focus {
-    background: var(--light-gray);
+input[type=button]:not(:disabled):hover, input[type=date]:not(:disabled):hover, a.btn:not(:disabled):hover, select:not(:disabled):hover, button:not(:disabled):hover,
+input[type=button]:focus, input[type=date]:focus, a.btn:focus, select:focus, button:focus {
+    background: var(--light-gray-2);
     box-shadow: 0rem 0.1rem 0.2rem var(--btn-shadow);
 }
 
@@ -146,8 +151,8 @@ input[type=submit]:disabled, input[type=button]:disabled, a.btn:disabled, select
     cursor: not-allowed;
 }
 
-input[type=submit]:focus, input[type=button]:focus, a.btn:focus, button:focus, select:focus,
-input[type=submit]:active, input[type=button]:active, a.btn:active, button:active, select:active {
+input[type=submit]:focus, input[type=button]:focus, input[type=date]:focus, a.btn:focus, button:focus, select:focus,
+input[type=submit]:active, input[type=button]:active, input[type=date]:active, a.btn:active, button:active, select:active {
     outline: 0.05rem solid var(--black);
 }
 
