--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,13 +3,10 @@
     <head>
         <title>sIMS</title>
         <link rel="icon" href="{{ url_for('static', filename = 'favicon.png') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'fonts/fonts.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_table.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_inventory.css') }}">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <script src="{{ url_for('static', filename = 'script_table.js') }}"></script>
     </head>
 
@@ -17,16 +14,18 @@
         <header>
             <h1 id="title"><span>s</span>IMS</h1>
             <div id="profile">
-                <!-- session['user'] = (role_id, username, password, firstName, lastName, role_name) of the CURRENT user -->
-                <p class="info" id="profile-name">{{ (session['user'])[3] }} {{ (session['user'])[4] }}</p>
-                <p class="info" id="profile-role">{{ (session['user'])[5] }}</p>
+                <p class="info" id="profile-name">{{ session['user']['FirstName'] }} {{ session['user']['LastName'] }}</p>
+                <p class="info" id="profile-role">{{ session['user']['RoleName'] }}</p>
             </div>
         </header>
 
         <div id="sidebar">
             <nav>
                 <a class="link {{ 'active' if active == 'inventory' }}" href="{{ url_for('inventory') }}">Inventory</a>
-                <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('requests') }}">{{ "My" if session['user'][0] == 2 else "Item"}} Requests</a>
+                <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('requests') }}">{{ "My" if session['user']['RoleID'] == 2 else "Item"}} Requests</a>
+                {% if session['user']['RoleID'] == 1 %}
+                    <a class="link {{ 'active' if active == 'deliveries' }}" href="{{ url_for('deliveries') }}">Deliveries</a>
+                {% endif %}
                 <a class="link logout" href="{{ url_for('logout') }}">Log out</a>
             </nav>
             
