--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_table.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_inventory.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'style_request.css') }}">
         <script src="{{ url_for('static', filename = 'script_table.js') }}"></script>
     </head>
 
