--- a/src/templates/inventory/remove.html
+++ b/src/templates/inventory/remove.html
@@ -181,14 +181,14 @@
 
     document.querySelector("#submit-form").addEventListener("submit", e => {
         e.preventDefault();
-        fetch("{{ url_for('remove_items') }}", {
+        fetch("{{ url_for('bp_inventory.remove_items') }}", {
             "method": "POST",
             "headers": {
                 "Content-Type": "application/json"
             },
             "body": JSON.stringify({ "items": Array.from(document.querySelectorAll(".selection-table .table-body .table-row > :first-child")).map(x => x.innerHTML) })
         }).then(d => {
-            if (d.status === 200) window.location = "{{ url_for('inventory') }}";
+            if (d.status === 200) window.location = "{{ url_for('bp_inventory.inventory') }}";
         });
     })
 </script>
