--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -16,7 +16,9 @@
                 <div>Requested By</div>
                 <div>Request Date</div>
                 <div>Request Status</div>
-                <div>Request Contents</div>
+                <div>Item ID</div>
+                <div>Description</div>
+                <div>Request Quantity</div>
             </div>
         </div>
         <div class="table-body">
