--- a/src/templates/user/user.html
+++ b/src/templates/user/user.html
@@ -5,8 +5,8 @@
 <div id="content-top">
     <h1 class="main-header">Users</h1>
 
-    <a class="btn" href="{{ url_for('add_users') }}">Add users</a>
-    <a class="btn" href="{{ url_for('remove_users') }}">Remove users</a>
+    <a class="btn" href="{{ url_for('bp_user.add_users') }}">Add users</a>
+    <a class="btn" href="{{ url_for('bp_user.remove_users') }}">Remove users</a>
 
     <form id="search">
         <input type="search" id="search-box" placeholder="Search user&hellip;" name="keyword" autofocus>
