--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,16 +22,16 @@
 
         <div id="sidebar">
             <nav>
-                <a class="link {{ 'active' if active == 'inventory' }}" href="{{ url_for('inventory') }}">Inventory</a>
+                <a class="link {{ 'active' if active == 'inventory' }}" href="{{ url_for('bp_inventory.inventory') }}">Inventory</a>
                 {% if session['user']['RoleID'] == 1 %}
-                    <a class="link {{ 'active' if active == 'deliveries' }}" href="{{ url_for('deliveries') }}">Deliveries</a>
+                    <a class="link {{ 'active' if active == 'deliveries' }}" href="{{ url_for('bp_delivery.deliveries') }}">Deliveries</a>
                 {% endif %}
-                <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('requests') }}">{{ "My" if session['user']['RoleID'] == 2 else "Item"}} Requests</a>
+                <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('bp_request.requests') }}">{{ "My" if session['user']['RoleID'] == 2 else "Item"}} Requests</a>
                 {% if session['user']['RoleID'] == 0 %}
-                    <a class="link {{ 'active' if active == 'users' }}" href="{{ url_for('show_users') }}">Users</a>
+                    <a class="link {{ 'active' if active == 'users' }}" href="{{ url_for('bp_user.show_users') }}">Users</a>
                 {% endif %}
-                <a class="link {{ 'active' if active == 'settings' }}" href="{{ url_for('change_account_settings') }}">Account settings</a>
-                <a class="link logout" href="{{ url_for('logout') }}">Log out</a>
+                <a class="link {{ 'active' if active == 'settings' }}" href="{{ url_for('bp_user.change_account_settings') }}">Account settings</a>
+                <a class="link logout" href="{{ url_for('bp_auth.logout') }}">Log out</a>
             </nav>
             
             <footer>
