--- a/src/templates/inventory/add.html
+++ b/src/templates/inventory/add.html
@@ -143,14 +143,14 @@
             })
         }
         
-        fetch("{{ url_for('add_items') }}", {
+        fetch("{{ url_for('bp_inventory.add_items') }}", {
             "method": "POST",
             "headers": {
                 "Content-Type": "application/json"
             },
             "body": JSON.stringify({ "values": values })
         }).then(async d => {
-            if (d.status === 200) window.location = "{{ url_for('inventory') }}";
+            if (d.status === 200) window.location = "{{ url_for('bp_inventory.inventory') }}";
             if (d.status === 500) {
                 msg = await d.text();
                 document.querySelector("#errmsg").innerHTML = `<b>ERROR:</b> ${msg}`;
