Minor bug fixes
- Fixed some `url_for()` calls

--- a/src/templates/deliveries/deliveries.html
+++ b/src/templates/deliveries/deliveries.html
@@ -6,7 +6,7 @@
 
     <div id="inputs">
         <div>
-            <a class="btn" href="{{ url_for('add_deliveries') }}">Log deliveries</a>
+            <a class="btn" href="{{ url_for('bp_delivery.add_deliveries') }}">Log deliveries</a>
             
             <form id="search">
                 <input type="search" id="search-box" placeholder="Search deliveries&hellip;" name="keyword" autofocus>
