--- a/src/templates/user/remove.html
+++ b/src/templates/user/remove.html
@@ -109,7 +109,7 @@
             },
             "body": JSON.stringify({ "users": Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :first-child")).map(x => x.innerHTML), "emails":  Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :nth-child(4)")).map(x => x.innerHTML)})
         }).then(d => {
-            if (d.status === 200) window.location = "{{ url_for('show_users') }}";
+            if (d.status === 200) window.location = "{{ url_for('bp_user.show_users') }}";
         });
     })
 </script>
