--- a/src/templates/user/settings.html
+++ b/src/templates/user/settings.html
@@ -7,7 +7,7 @@
     </div>
     
     <div>
-        <form action="{{ url_for('change_password') }}" method="post">
+        <form action="{{ url_for('bp_user.change_password') }}" method="post">
             <label for="new-password">Enter new password:</label>
             <input type="password" id="new-password" name="new-password" style="width:300px; padding: 5px; margin-left:10px; margin-right: 10px;" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,12}" minlength="1">
             <input type="submit" value="Submit" id="submit" disabled>
@@ -29,7 +29,7 @@
     </div>
     
     <div id = "email-form">
-        <form action="{{ url_for('change_email') }}" method="post">
+        <form action="{{ url_for('bp_user.change_email') }}" method="post">
             <label for="new-password">Enter new email address:</label>
             <input type="email" id="new-email" name="new-email" placeholder="{{ '' if  session['user']['Email'] is none else session['user']['Email'] }}" maxlength="50" title="Email address must have a gmail.com domain">
             <input type="submit" value="Submit" disabled>
