--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -4,21 +4,50 @@
 
 <div id="content-top">
     <h1 class="main-header">
-        All Requests
+        {{ 'Item' if session['user']['RoleID'] == 1 else 'My' }} Requests
     </h1>
+
+    <div id="inputs">
+        <div>
+            <form id="search">
+                <input type="search" id="search-box" placeholder="Search requests&hellip;" name="keyword" autofocus>
+                <input type="submit" id="search-btn" value="Search" name="search-btn">
+            </form>
+        </div>
+    </div>
 </div>
 
 <div class="table-wrapper">
-    <div class="table-main request-table">
+    <div class="table-main request-table {{ 'cust' if session['user']['RoleID'] == 1 else '' }}">
         <div class="table-header">
-            <div class="table-row request-details">
-                <div>Request ID</div>
-                <div>Requested By</div>
-                <div>Request Date</div>
-                <div>Request Status</div>
+            <div class="table-row">
+                <div class="table-sortable">
+                    <button role="button" class="sort-btn">
+                        RID
+                        <i class="bi bi-chevron-expand"></i>
+                    </button>
+                </div>
+                {% if session['user']['RoleID'] == 1 %}
+                    <div class="table-sortable">
+                        <button role="button" class="sort-btn">
+                            Requested By
+                            <i class="bi bi-chevron-expand"></i>
+                        </button>
+                    </div>
+                {% endif %}
+                <div class="table-sortable">
+                    <button role="button" class="sort-btn">
+                        Request Date
+                        <i class="bi bi-chevron-expand"></i>
+                    </button>
+                </div>
+                <div>Status</div>
                 <div>Item ID</div>
-                <div>Description</div>
+                <div>Item Name</div>
+                <div>Item Description</div>
                 <div>Request Quantity</div>
+                <div>Available Quantity</div>
+                <div>Unit</div>
             </div>
         </div>
         <div class="table-body">
@@ -33,7 +62,41 @@
 </div>
 
 <script>
-    window.addEventListener("load", () => populateRequests(document.querySelector(".request-table .table-body"), "", "all"))
+    let currentSort = [0, true];
+
+    document.querySelectorAll(".request-table .sort-btn").forEach(x => {
+        const p = x.parentElement;
+        x.addEventListener("click", () => {
+            currentSort = sortTable(document.querySelector(".request-table"), Array.prototype.indexOf.call(p.parentElement.children, p), currentSort, { shelfLife: x.innerText.includes("Shelf Life"), date: x.innerText.includes("Date") });
+        });
+    });
+
+    document.querySelector("#search").addEventListener("submit", e => {
+        e.preventDefault();
+        populateRequests(document.querySelector(".request-table .table-body"), document.querySelector("#search-box").value);
+
+        let oldSym = document.querySelector(`.request-table .table-header .table-row > :nth-child(${currentSort[0] + 1}) .bi`);
+        oldSym.classList.remove(`bi-chevron-${currentSort[1] ? "up" : "down"}`);
+        oldSym.classList.add("bi-chevron-expand");
+
+        currentSort = [0, true];
+
+        let newSym = document.querySelector(".request-table .table-header .table-row > :nth-child(1) .bi");
+        newSym.classList.remove("bi-chevron-expand");
+        newSym.classList.add("bi-chevron-up");
+    });
+
+    document.addEventListener("tablerefresh", () => {
+        currentSort = [0, true];
+
+        if (document.querySelector(".request-table .bi-chevron-up, .request-table .bi-chevron-down")) document.querySelector(".request-table .bi-chevron-up, .request-table .bi-chevron-down").classList.add("bi-chevron-expand");
+        if (document.querySelector(".request-table .bi-chevron-up")) document.querySelector(".request-table .bi-chevron-up").classList.remove("bi-chevron-up");
+        if (document.querySelector(".request-table .bi-chevron-down")) document.querySelector(".request-table .bi-chevron-down").classList.remove("bi-chevron-down");
+        document.querySelector(".request-table .bi-chevron-expand").classList.add("bi-chevron-up");
+        document.querySelector(".request-table .bi-chevron-expand").classList.remove("bi-chevron-expand");
+    });
+
+    window.addEventListener("load", () => populateRequests(document.querySelector(".request-table .table-body")))
 </script>
 
 {% endblock %}
