Added input status to populateRequests function to filter search by Request Status

--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -96,7 +96,7 @@
         document.querySelector(".request-table .bi-chevron-expand").classList.remove("bi-chevron-expand");
     });
 
-    window.addEventListener("load", () => populateRequests(document.querySelector(".request-table .table-body")))
+    window.addEventListener("load", () => populateRequests(document.querySelector(".request-table .table-body"), "", "all"))
 </script>
 
 {% endblock %}
